# FastAPI-playground

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_db.py  uuid7.py
alembic/: env.py
alembic/versions/: 7da983b26907_create_table.py
app/: main.py  settings.py
app/api/: deps.py
app/core/: config.py  db.py  security.py
app/utils/: uuid7.py
