[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = "A silly fastapi playground where silly things are happening."
authors = ["STACiA <stacia.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
coverage = "^7.4.4"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["alembic"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportUnusedImport = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingParameterType = "error"
reportUnusedVariable = "warning"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.format]
preview = true
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG001", # unused arguments in functions
]

ignore = [
  "E501",  # line too long, handled by black
]

[tool.ruff.lint.isort]
combine-as-imports = true
